# django-docx-template

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
django_docx_template/: apps.py  data_sources.py  forms.py  models.py  test_doc.docx  tests.py  urls.py  utils.py  views.py
django_docx_template/migrations/: 0001_initial.py  0002_alter_docxtemplate_slug.py
django_docx_template/templates/django_docx_template/: datasource_detail.html  docxtemplate_detail.html  docxtemplate_form.html  docxtemplate_list.html
tests/: test_django_docx_template.py
