[project]
name = "django-docx-template"
version = "0.1.0"
description = "Django-Template-Docx provide all the necessities to easily include docx merging capabilities to any Django project."
readme = "README.md"
requires-python = "^3.9"
license = "MIT"
authors = ["Swann <swann.bouviermuller@gmail.com>"]
keywords = ["Django", "Docx", "merge", "jinja"]
dependencies = [
    "requests >=2.6",
    "configparser; python_version == '2.7'",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Source = "https://github.com/Swannbm/django-docx-template"
Issues = "https://github.com/Swannbm/django-docx-template/issues"
